prevented the logo from stretching out

--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -22,7 +22,7 @@ $h5: calc(.5vw + 1em);
 	}
 
 	&__logo img {
-		width: 100%;
+		width: auto;
 		height: auto;
 		max-height: 100px;
 	}
